# beautiful-ai

./: LICENSE  README.md  pyproject.toml
.chglog/: config.yml
.github/workflows/: lint_and_test.yml
src/: main.py  settings.py
